--- a/src/app/does-it-work/does-it-work.component.html
+++ b/src/app/does-it-work/does-it-work.component.html
@@ -21,54 +21,143 @@
         <div class="menu-padding"></div>
 
         <div class="does-itWork">
-          <h2 class="spotbie-text-gradient" *ngIf="!isMobile">START ATTRACTING MORE USERS</h2>
-          <h2 class="spotbie-text-gradient" *ngIf="isMobile">ATTRACT MORE USERS</h2>
-          <h2 class="sb-text-light-green-gradient">WITH REWARDS & LOYALTY POINTS</h2>
+          <h2 class="spotbie-text-gradient" *ngIf="!isMobile">ATTRACT AND RETAIN USERS</h2>
+          <h2 class="spotbie-text-gradient" *ngIf="isMobile">ATTRACT & RETAIN USERS</h2>
+          <h2 class="sb-text-light-green-gradient">Loyalty Programs & Marketing</h2>
+
+          <h2 class="sb-text-light-green-gradient mt-5">Our Vision</h2>
+          <p>
+            We started SpotBie to build a highly rich experience for people who love the products and services
+            our Community Members offer and for the extraordinary people who provide them; YOU, the business owner.
+          </p>
+
+          <h2 class="sb-text-light-green-gradient mt-5">Our Features</h2>
+          <ul>
+            <li>Loyalty Points, Rewards, and Tiers</li>
+            <li>Local Results</li>
+            <li>Site-wide Results</li>
+            <li>Ad Banners within our platforms</li>
+            <li>API Integrations</li>
+            <li>SMS and E-mail Campaigns</li>
+            <li>Geofence Marketing</li>
+            <li>Use Customer Data</li>
+          </ul>
 
           <h2 class="sb-text-light-green-gradient mt-5">What problem does SpotBie solve?</h2>
           <p>
-            Loyalty programs are well known to bring in additional revenue for businesses. Many franchises and
-            retails own their own in-house loyalty program. However, smaller restaurants and stores are
-            left with less options to compete because they lack the funding for maintaining an in-house loyalty program.
-            SpotBie is a solution for small to medium businesses who are looking to build a brand, grow their crowd, and
-            create loyalty in their community.
+            Loyalty programs are well known to bring in additional revenue and brand awareness for businesses. Many large franchises and
+            retails have in-house loyalty programs. However, some restaurants and retail stores are left with less options to compete because
+            they lack the funding for maintaining an in-house loyalty program.
           </p>
-          <h2 class="sb-text-light-green-gradient mt-5">Our Vision</h2>
+          <br/>
           <p>
-            We started SpotBie to build a highly rich experience for the people who love the products and services
-            our community members offer and for the ones who provide them; YOU, the business owner.
+            Alternatively, some businesses use third party loyalty programs that come integrated with POS systems such as Square. While this is a great option, it leaves out
+            the focus on building a highly rich loyalty program experience for your users because of their broad focus.
+          </p>
+          <br/>
+          <p>
+            By signing up through our website, you are becoming part of an unforgettable experience. Not only do we provide an
+            integration for businesses to use on their online stores, but we also offer a stand-alone user app on iOS and Android.
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Creating a Community</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">Growing Brand Awareness</h2>
           <p>
-            Building a loyal audience is a key parameter to your business being successful. With a loyal audience you are almost
-            guaranteed to keep an active flow of revenue. Our Loyalty Points system rewards users for such behavior and
-            gives them additional reasons to visit your store.
+            SpotBie gives businesses an additional tool to grow their brand. Business owners can use SpotBie to deliver their product/service to the right audience,
+            to be listed amongst relevant/high standard businesses, and appear in users' local and site-wide results.
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Listed amongst Excellence</h2>
+          <div style="padding-left: 1rem;">
+            <h3 class="sb-text-light-green-gradient mt-5">1. Deliver to the Right Audience</h3>
+            <p>
+              When you are listed on our platform, your business starts attracting users that are one step away from making
+              a decision and start spending. The intent each user has when they open the SpotBie app is to look for something that is
+              nearby and solve their dinner or shopping plans. Quick and easy, at the tap of three buttons (sometimes two), the user is provided with a list of
+              highly rated and reviewed restaurants or retail stores.
+            </p>
+
+            <h3 class="sb-text-light-green-gradient mt-5">2. Listed Amongst Excellence</h3>
+            <p>
+              At SpotBie, you are listed amongst competent restaurants and retails stores that make excellence a habit. To being with,
+              we take a look at ratings and reviews from Yelp. If we consider a business is worth taking a closer look at, we go ahead and
+              experience their food, products, or services through personal consumption. Yes... that's right, we try them out ourselves! We love delicious food,
+              great customer service, and great products so we aren't willing to offer our users anything less!
+            </p>
+
+            <h3 class="sb-text-light-green-gradient mt-5">3. Local Results</h3>
+            <p>
+              Your restaurant or retail store will appear in a map drawn according to the user's distance from your store. In turn,
+              this will ramp-up your local brand awareness near your stores' locations. In the other hand, if there are tourists nearby,
+              our platform simplifies the user experience so that they can easily see what they have around and closest to them.
+            </p>
+
+            <h3 class="sb-text-light-green-gradient mt-5">4. Site-wide Results</h3>
+            <p>
+              Your restaurant, store, service, or event will also be featured on our site-wide results. This means that people from all
+              over the nation can search for your store online and make orders through your website while accumulating loyalty.
+            </p>
+          </div>
+
+          <h2 class="sb-text-light-green-gradient mt-5">Acquisition & Retention</h2>
           <p>
-            At SpotBie, you are listed amongst competent restaurants and retails stores who make excellence a habit. We
-            look at ratings and reviews from major platforms and take a closer look at their products and services through
-            personal consumption and use... Yes... we try them out ourselves! We love delicious food, great customer service,
-            and great products. We aren't willing to offer our users anything less!
+            Loyalty programs offer a huge incentive for guests to visit your store. Here at SpotBie, we've added an extra twist that
+            helps bring new customers to your store and retain existing ones.
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Delivering to the Right Audience</h2>
-          <p>
-            When you are listed on our platform, your business starts attracting users that are one step away from making
-            a decision and start spending. The intent each user has when they open our app is to look for something that is
-            nearby and solve their dinner plans. Quick and easy, at the tap of three buttons (sometimes two), the user is provided with a list of
-            highly rated and reviewed restaurants or retail stores.
-          </p>
+          <div style="padding-left: 1rem;">
+            <h3 class="sb-text-light-green-gradient mt-5">1. Local Results</h3>
+            <p>
+              Our app allows users to instantly find what stores are around them. Once they open the SpotBie app and click on the
+              category they are searching for, they are presented with a list of nearby restaurants or stores. This makes it easy
+              for users to choose a store, nearing the gap between the prospective user and the end of the marketing funnel.
+            </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Nearby Results</h2>
+            <h3 class="sb-text-light-green-gradient mt-5">2. Different Loyalty Campaigns</h3>
+            <p>
+              To keep things entertaining for your customers, we have included the ability to launch different types of
+              campaigns. You can choose to award items, discounts, experiences, and run programs such as birthday awards
+              and loyalty tiers.
+            </p>
+
+            <h3 class="sb-text-light-green-gradient mt-5">3. Compete Locally with other Members</h3>
+            <p>
+              By adjusting your Dollar-to-Loyalty Point ratio you can adjust the value of loyalty points when users spend
+              at your business. Users that look at these businesses thorugh our map or online can then compare reward
+              rates and rewards to see where they want to shop.
+            </p>
+
+            <h3 class="sb-text-light-green-gradient mt-5">4. Set Limits</h3>
+            <p>
+              Business owners can set the minimum expense amounts before rewards can be redeemed at their stores.
+              Additionally, SpotBie Community Members get to choose how much they want to give out in rewards every month.
+            </p>
+
+            <h3 class="sb-text-light-green-gradient mt-5">5. Site-wide Results</h3>
+            <p>
+              SpotBie also allows users to find site-wide stores through the search function on our website.
+            </p>
+
+            <h3 class="sb-text-light-green-gradient mt-5">6. API & Widget Integrations</h3>
+            <p>
+              Do you have an online store and wish to add a loyalty program feature into it? SpotBie can make that happen
+              for you.
+            </p>
+          </div>
+
+          <h2 class="sb-text-light-green-gradient mt-5">Use Customer Data</h2>
           <p>
-            Your restaurant or retail store will appear in a list according to its category. Results from this list which you appear in,
-            are drawn according to the user's distance from your store. For example, let's say Sam and Frodo are hanging out on a Friday
-            night near the beach. Suddenly Sam gets hungry and decides he wants to eat something... he knows where to go. All he
-            has to do is tap the SpotBie app and he'll be getting a list of nearby results that are going to offer him a superb experience.
+            SpotBie Community Members have the ability to use customer data for their marketing efforts. On our business admin dashboard, you will find
+            reports and utilities that will help maximize your business's efficiency.
           </p>
+          <div style="padding-left: 1rem;">
+            <h3 class="sb-text-light-green-gradient mt-5">1. Send Promotional Content</h3>
+            <p>
+              SpotBie helps your business send promotional content through different methods. As a SpotBie Community Member,
+              you are allowed to send personalized e-mail campaigns, text-msgs. and nearby notifications, to customers who have opted to receive them.
+            </p>
+
+            <h3 class="sb-text-light-green-gradient mt-5">2. New & Repeat Customers</h3>
+            <p>Learn which customers are in your store for the first time and which ones are returning.</p>
+          </div>
         </div>
 
         <div class='spotbie-overlay-window' style="z-index: 99;" *ngIf="false">
