--- a/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
+++ b/src/app/spotbie/spotbie-logged-in/qr/qr.component.html
@@ -76,7 +76,7 @@
         </p>
 
         <span class='spotbie-button text-uppercase mt-5 mb-4' (click)="yes()">
-            YES <i class="fa fa-hamburger"></i>
+            YES <i class="fa fa-coins"></i>
         </span>
 
         <div class='spotbie-text-gradient cursor-pointer' (click)="no()">
