--- a/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
+++ b/src/app/spotbie/spotbie-logged-in/settings/settings.component.html
@@ -138,13 +138,13 @@
                                 readonly="readonly" />
                     </td>
                 </tr>
-                <tr *ngIf="chosenAccountType != 4" (click)="changeAccType()">
+<!--                <tr *ngIf="chosenAccountType != 4" (click)="changeAccType()">
                     <td>
                         <div class="spotbie-input-info text-center spotbie-text-gradient cursor-pointer mt-2 mb-2">
                             MANAGE MEMBERSHIP
                         </div>
                     </td>
-                </tr>
+                </tr>-->
                 <tr>
                     <td>
                         <div class='spotbie-button spotbie-save-settings-button text-uppercase mb-5' (click)="saveSettings()">
