--- a/src/app/beta/beta.component.html
+++ b/src/app/beta/beta.component.html
@@ -21,37 +21,32 @@
         <div class="menu-padding"></div>
 
         <div class="does-itWork">
-          <h2 class="spotbie-text-gradient">HOW DOES IT WORK</h2>
-          <h2 class="sb-text-light-green-gradient">BUSINESS PLATFORM</h2>
+          <h2 class="sb-text-light-green-gradient">JOIN OUR BETA PROGRAM</h2>
+          <h2 class="spotbie-text-gradient">IT'S FREE & YOU'LL GET SOMETHING OUT OF IT</h2>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Start by creating an account.</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">What's this about?</h2>
           <p>
-            Loyalty programs are well known throughout the U.S. Many of them bring in large sums of revenue for businesses
-            every year. If you are looking for extra revenue somewhere, SpotBie could be your go-to.
-            We started SpotBie to build something fun and worth using. The end result was a SaaS
-            that allows businesses to upload their most successful products and services into a platform which users love to spend time on.
-            Keep reading to find out how we can help increase your revenue.
+            We are inviting restaurant owners and retail owners to our Beta Program. In order to get your business listed,
+            all you have to do is sign-up for a new account and follow the instructions on your dashboard. After doing so,
+            you'll be able to find
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Set Up Your Loyalty Points.</h2>
+          <img src="assets/images/beta/beta_1-mid.png" />
+
+          <h2 class="sb-text-light-green-gradient mt-5">Your Loyalty Points</h2>
           <p>
-            In order to set up your account begin by signing up. We require most of our business accounts to have a well reviewed Yelp or Google
-            Business profile before completing their onboarding process. When you confirm your interest in our platform, we'll schedule an intro call and
-            go over the basics for your business portal along with your Loyalty Points and Rewards list. We'll also give you a quick look around at what our
-            user's see when driving by or walking by your store and what you can expect from us in the near future.
+            To set up your loyalty points click or tap on the Loyalty Points component and fill out the loyalty points you'd like to offer and how much they
+            are worth per dollar spent at your business.
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Post Up Some Swag</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">Upload Rewards</h2>
           <p>
-            Every business begins by completing the onboarding process. After the process is completed, you will receive an onboarding package
-            from SpotBie indicating the next steps. Our care package includes various accessories which will help you as a business owner and your
-            clients and seamless experience while claiming Rewards or Loyalty Points.
+            As a business owner you are encouraged to upload the best of your menu items onto your digital rewards menu to entice the audience.
           </p>
 
-          <h2 class="sb-text-light-green-gradient mt-5">Start the Show!</h2>
+          <h2 class="sb-text-light-green-gradient mt-5">Award Users</h2>
           <p>
-            After you are all set in and ready, we'll start sending SpotBie Users directly to your store on the days you've chosen as part of your
-            introductory boost promotion.
+            Award your guests with Loyalty Points at check-out. Additionally, allow them to claim your rewards while looking at your custom rewards menu.
           </p>
         </div>
 
