--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -7,7 +7,8 @@
 
     <br/>
 
-    <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>
+    <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;" *ngIf="isMobile">GROW YOUR<br/>BUSINESS</h1>
+    <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;" *ngIf="!isMobile">GROW YOUR BUSINESS</h1>
     <br/>
 
     <h2>
@@ -37,19 +38,19 @@
         <br/>
     </p>
 
-    <ng-container *ngIf="!isMobile"> 
+    <ng-container *ngIf="!isMobile">
         <div class="d-flex align-middle justify-content-center">
             <button class="spotbie-button sb-getStarted sbBetaBtn mt-4 mb-5" (click)="calendly()">
                 SCHEDULE DEMO
             </button>
-     
+
             <button class="spotbie-button sb-getStarted sbBetaBtn mt-4 mb-5" (click)="signUp()">
                 JOIN THE BETA
             </button>
         </div>
     </ng-container>
 
-    <ng-container *ngIf="isMobile"> 
+    <ng-container *ngIf="isMobile">
         <div>
             <button class="spotbie-button sb-getStarted mt-5 mb-4" (click)="calendly()">
                 SCHEDULE DEMO
