--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,12 @@
-<app-menu-logged-out class="spotbie-app-menu"
+<app-menu-logged-out #appMenuLoggedOut 
+                    class="spotbie-app-menu"
                     (myFavoritesEvt)="myFavorites()"
                     (spawnCategoriesOut)="spawnCategories($event)"
                     (openHome)="openHome()">
                     </app-menu-logged-out>
 
 <div class="spotbie-main-holder" id="spotbieMainHolder">
-    <app-map [business]="false" #app_map></app-map>z
+    <app-map [business]="false" (signUpEvt)="signUp()" #app_map></app-map>z
 
     <div class="spotbie-menu-page-padding-top-not-logged"></div>
 </div>
