--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward/reward.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward/reward.component.html
@@ -7,41 +7,36 @@
     </div>
 
     <div class='spotbie-info-object-title' [ngClass]="getFullScreenModeClass()">
-                        
         <h6 class="spotbie-text-gradient sb-titleGreen text-uppercase">SPOTBIE COMMUNITY REWARD</h6>
 
         <img class='sb-miniLogoIcon' src="assets/images/home_imgs/spotbie-green-icon.svg" />
 
         <h1 class="spotbie-text-gradient sb-titleGreen text-uppercase mb-3">{{ reward.name }}</h1>
-
     </div>
 
     <div class='spotbie-info-object-image-list' *ngIf="reward.images != ''">
-
         <div class='spotbie-info-object-image-thumb'
-            *ngIf="reward.type == '0'"
+            *ngIf="reward.type === 0"
             [ngStyle]="{ 'background' : 'url(' + reward.images + ')'}"></div>
 
-        <div class='spotbie-info-object-image-thumb discount' 
-            *ngIf="reward.type == '1'"
+        <div class='spotbie-info-object-image-thumb discount'
+            *ngIf="reward.type === 1 || reward.type === 2"
             [ngStyle]="{ 'background': 'linear-gradient(90deg,#35a99f,#64e56f)' }">
 
-            <h6 *ngIf="reward.type == '1'">
+            <h6 *ngIf="reward.type === 1">
                 <span class='sb-text-light-green-gradient'>
                     {{  reward.point_cost * (userPointToDollarRatio / 100) | currency : 'USD' }} DISCOUNT
                 </span>
-            </h6>       
-                 
+            </h6>
         </div>
-
     </div>
 
     <h3 class="sb-text-light-green-gradient text-uppercase mt-5">
         {{ reward.point_cost | number:'1.00':'en-US' }} LP COST
-        
+
     </h3>
 
-    <h5 class="spotbie-text-gradient text-uppercase mt-2">       
+    <h5 class="spotbie-text-gradient text-uppercase mt-2">
         {{ ( reward.point_cost * (userPointToDollarRatio / 100) ) | currency : 'USD' }} VALUE
     </h5>
 
@@ -50,20 +45,20 @@
     </div>
 
     <div class='spotbie-share-buttons-wrappper' *ngIf="reward !== undefined">
-    
+
         <share-buttons
                 show="4"
                 theme="material-dark"
                 [url]="reward.link"
                 [title]="reward.name"
                 [description]="reward.description"
-                [autoSetMeta]="false">     
+                [autoSetMeta]="false">
         </share-buttons>
 
     </div>
 
     <div class='spotbie-copy-link-button spotbie-text-gradient text-uppercase mt-5' (click)="linkCopy(rewardShareLink)">tap to copy link</div>
-    
+
     <div class='mt-4' (click)="linkCopy(rewardShareLink)">
 
         <input class='sb-input sb-infoObjectInputLight' type='text' [(value)]="reward.link" readonly #rewardShareLink />
